project(LeetCodeCN)
set (CMAKE_CXX_STANDARD 11)
add_executable(341_flatten-nested-list-iterator leetcode/editor/cn/341_flatten-nested-list-iterator.cpp)
add_executable(6_zigzag-conversion leetcode/editor/cn/6_zigzag-conversion.cpp)
add_executable(456_132-pattern leetcode/editor/cn/456_132-pattern.cpp)